# cli

./: .gitignore  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  cppcheck.args  docker-compose.yml  misra.json  misra_rules.txt  project.cppcheck
.devcontainer/: Dockerfile
.github/workflows/: ccpp.yml  main.yml
example/: BUILD  cmd_list.c  cmd_list.h  main.c  uart.c  uart.h
lib/: BUILD  cli.c  cli.h  ringbuffer.c  ringbuffer.h  test_cmd_list.cc  test_cmd_list.h  test_history.cc  test_ringbuffer.cc
src/: cli.c  cli.h  ringbuffer.c  ringbuffer.h
test/: TEST_cli.c  TEST_cmd_list.c  TEST_cmd_list.h  TEST_main.c
