bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.9.0")

# Use http_archive from bazel_tools since we want a custom BUILD file for googletest
# to avoid the Bazel 9 "removed native rules" issue.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# GoogleTest (gtest) for C++ unit testing
http_archive(
    name = "googletest",
    urls = ["https://github.com/google/googletest/archive/refs/tags/v1.17.0.tar.gz"],
    strip_prefix = "googletest-1.17.0",
    build_file = "//third-party:gtest.BUILD",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    # remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # hedronvision hasn't merged the fix for Bazel 9 yet, but we can point to the branch with the fix in the meantime.
    remote = "https://github.com/xFile3160/bazel-compile-commands-extractor.git",
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
